# wxrd

./: .clang-format  LICENSE  README.md  meson.build
src/: backend.c  backend.h  input.c  input.h  main.c  meson.build  output.h  server.h  view.c  view.h  wxrd-renderer.c  wxrd-renderer.h  xdg-shell.c  xwayland.c  xwayland.h
